CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(vtkfox)
SET (CMAKE_BUILD_TYPE Release)
SET (VTKFOX_VERSION 1.0.0)

#
# VTK
#
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

#
# FOX version to use
#
OPTION(FOX17 "Use FOX 1.7 instead of FOX 1.6" OFF)

IF (${FOX17})
   SET(FOX_MODULE fox17)
ELSE (${FOX17})
   SET(FOX_MODULE fox)
ENDIF (${FOX17})

#
# PkgConfig (used to find FOX)
#
FIND_PACKAGE(PkgConfig REQUIRED)

#
# FOX
#
PKG_CHECK_MODULES(FOX REQUIRED ${FOX_MODULE})

INCLUDE_DIRECTORIES(${FOX_INCLUDE_DIRS})
LINK_DIRECTORIES(${FOX_LIBRARY_DIRS} ${FOX_LIBDIR})
SET(FOX_LIBS ${FOX_LIBRARIES})

CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/vtkfox.pc.cmake ${CMAKE_BINARY_DIR}/vtkfox.pc @ONLY)
INSTALL (FILES ${CMAKE_BINARY_DIR}/vtkfox.pc DESTINATION libdata/pkgconfig)

SUBDIRS(src tests)
